# JSONToolkit

./: .gitmodules  AUTHORS  CMakeLists.txt  LICENSE  README.md
lua/: lua-include.lua
src/: json_plugin.cpp  json_plugin.h  json_pybind.cpp  json_schema_validator.cpp  json_schema_validator.hpp  json_toolkit.cpp  json_toolkit.hpp  parameter_set.cpp  parameter_set.h
test/: run_tests.sh  test-builders.lua  test-json-factories.lua  test-json-validate.lua  test.lua
test/basic-01/: instance.json  schema.json
test/basic-01-person/: instance.json  schema.json
test/basic-02-rectangle/: instance.json  schema.json
test/basic-03-convcheck/: instance_std_convcheck.json  solver.convcheck.instance.json  solver.convcheck.json  solver.convcheck.schema.json  test-validate-create.lua
util/: json_schema_validator.cpp  json_schema_validator.hpp  json_toolkit.hpp
